# ANNC

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.en.md  README.md  TESTING.md  WORKSPACE  build.sh  diff.diff  requirements.txt  test_matmul.py  tf2.2_annc_guide.md  tf_protos_minimal.sh
annc/: CMakeLists.txt
annc/include/: Helper.h
annc/include/Adaptor/tensorflow/: TF2Atir.h  TFSavedModelParser.h
annc/include/Builder/: Builder.h  MLIROpBuilder.h
annc/include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
annc/include/Conversion/AtirToAffine/: AtirTypeConverter.h  OpLowering.h
annc/include/Conversion/AtirToLinalg/: AtirTypeConverter.h  OpLowering.h
annc/include/Conversion/Common/: AtirLowering.h  CustomizeCallLowering.h  InputTypeConverter.h
annc/include/Dialect/: CMakeLists.txt
annc/include/Dialect-c/: Dialects.h  Passes.h
annc/include/Dialect/Atir/: AtirAttrs.td  AtirDialect.td  AtirEnums.td  AtirOpTrait.h  AtirOps.h  AtirOps.td  AtirTypes.td  CMakeLists.txt  CustomOpSchema.h
annc/include/Kernel/: BuiltinKernelSpecDeclare.h  BuiltinKernelSpecDefine.h  BuiltinKernelSpecRegister.h  KernelAPIMacros.h  KernelMacros.h  KernelPriorityResolver.h  KernelRegistry.h  KernelSymbolResolver.h  MemRefTypes.h
annc/include/Kernel/threadpool/: Parallel.h  ThreadPoolContext.h
annc/include/NewBuilder/: Builder.h
annc/lib/: CMakeLists.txt  Helper.cpp
annc/lib/Adaptor/tensorflow/: CMakeLists.txt  TF2Atir.cpp
annc/lib/Builder/: Builder.cpp  CMakeLists.txt  MLIROpBuilder.cpp
annc/lib/CAPI/: CMakeLists.txt  Dialects.cpp  Passes.cpp
annc/lib/Conversion/: CMakeLists.txt
annc/lib/Conversion/AtirToAffine/: AtirTypeConverter.cpp  CMakeLists.txt  ConvertAtirToAffine.cpp  OpLowering.cpp
annc/lib/Conversion/AtirToLinalg/: AtirTypeConverter.cpp  CMakeLists.txt  ConvertAtirToLinalg.cpp  OpLowering.cpp
annc/lib/Dialect/: CMakeLists.txt
annc/lib/Kernel/: CMakeLists.txt  KernelPriorityResolver.cpp  KernelRegistry.cpp  KernelSymbolResolver.cpp
annc/lib/NewBuilder/: Builder.cpp  CMakeLists.txt  MLIROpBuilder.cpp
annc/service/: BUILD  bisheng_cpu.h  blas_util.h  hlo_util.h  kdnn_util.h  kpgemm_util.h  optimizer_util.h
annc/service/bisheng-cpu/: BUILD  concat_partition.cc  concat_partition.h  embedding_simplify.cc  embedding_simplify.h  reduce_combine.cc  reduce_combine.h
annc/service/cpu/: BUILD  annc_flags.cc  annc_flags.h  gemm_rewriter.cc  graph_opt.cc  kdnn_rewriter.cc  kdnn_rewriter.h  reduce_rewriter.cc
annc/tensorflow/: tf_annc_optimizer.patch
annc/tensorflow/api_def/: api_def_KPFusedBatchMatMulAddSigmoid.pbtxt
annc/tensorflow/graph_optimizer/: BUILD  graph_opt.cc  graph_opt.h
annc/tensorflow/kernels/: embedding_fused_action_id_gather_test.cc  embedding_fused_gather_test.cc  embedding_fused_sparse_dynamic_stitch_test.cc  embedding_fused_sparse_reshape_test.cc  embedding_fused_sparse_segment_reduce_nonzero.cc  embedding_fused_sparse_segment_reduce_nonzero_test.cc  embedding_fused_sparse_segment_reduce_test.cc  embedding_fused_sparse_select_test.cc  fused_batchmatmul_add_sigmoid.cc  fused_batchmatmul_add_sigmoid_test.cc
annc/tensorflow/model_optimizer/: BUILD  constant_folding.cc  constant_folding.h
annc/tensorflow/ops/: embedding_fused_ops.cc
annc/tf-kernels/: RecEmbeddingV2.cc  recembedding_v1.cc
annc/tools/: CMakeLists.txt
annc/tools/annc/: CMakeLists.txt  annc.cpp
annc/tools/annc-asm/: CMakeLists.txt  annc-asm.cpp
annc/tools/annc-converter/: CMakeLists.txt  annc-converter.cpp
annc/tools/annc-fusion-metadata/: CMakeLists.txt  annc-fusion-metadata.cpp
annc/tools/annc-opt/: CMakeLists.txt  annc-opt.cpp
annc/tools/annc-tf-pipeline/: CMakeLists.txt  annc-tf-pipeline.cpp
annc/tools/annc-tf2atir/: CMakeLists.txt  absl_log_shim.cpp  annc-tf2atir.cpp  standalone_pb_parser.cpp  standalone_pb_parser.h
annc/tools/annc-verify/: CMakeLists.txt  annc-verify.cpp
annc/tools/kp-opt/: BUILD  kp-opt.cc
annc/tools/tf-adaptor/: tf-adaptor.cpp
cmake/: ThirdPartyKDNN.cmake  (+1 more)
kpgemm/lib/Dialect/: CMakeLists.txt
kpgemm/tools/kp-asm/: CMakeLists.txt  kp-asm.cpp
kpgemm/tools/kp-verify/: CMakeLists.txt  kp-verify.cpp
kpgemm/tools/tf-adaptor/: CMakeLists.txt
python/: AtirModule.cpp  AtirModule.h  Attributes.cpp  CMakeLists.txt  PimpModule.cpp  PimpModule.h  Types.cpp  setup.py
python/annc/: builder.py  enums.py  helper.py  main.py  ops.py  types.py
python/annc/dialects/: AtirDialect.td  atir.py
python/annc/optimize/: __init__.py  constant_folding.py  data_pack.py  graph.py  op_type.py  rec_embedding.py  rewriter.py  sparse_embedding.py
python/kpgemm/: builder.py  enums.py  helper.py  ops.py  types.py
python/kpgemm/dialects/: PimpDialect.td  pimp.py
python/scripts/: install.py
python/tensorflow/: generate_ir.py  inference.py
python/tensorflow/kernels/: KPFusedSimpleBaseMergeV2.cc  fused_dnn_embedding_with_hash_bucket.cc  fused_embedding_action_id_gather.cc  fused_embedding_padding.cc  fused_embedding_with_hash_bucket.cc  fused_gather.cc  fused_linear_embdedding_with_hash_bucket.cc  fused_sparse_concat.cc  fused_sparse_dynamic_stitch.cc  fused_sparse_embedding.cc  fused_sparse_reshape.cc  fused_sparse_segment_reduce.cc  fused_sparse_segment_reduce_nonzero.cc  fused_sparse_select.cc
python/tensorflow/tests/: test_fuesd_sparse_segment_reduce.py  test_fused_dnn_embedding_with_hash_bucket.py  test_fused_embedding_action_id_gather.py  test_fused_embedding_padding.py  test_fused_gather.py  test_fused_linear_embedding_with_hash_bucket.py  test_fused_sparse_dynamic_stitch.py  test_fused_sparse_reshape.py
tensorflow_addons/: CMakeLists.txt  annc_fused_op.cc  annc_fused_op.h  annc_fused_op_register.cc  annc_optimizer.cc  annc_optimizer.h  annc_optimizer_register.cc  baseline_session_config.pbtxt  build.sh  session_config.pbtxt  test_model_zoo_annc.sh
tests/kernels/: CMakeLists.txt  auto_kernel_impls.cpp  auto_kernel_specs.inc  auto_kernel_support.h  builtin_shared_spec_test.cpp  customcall_symbol_resolution_stub.cpp  kernel_priority_resolver_test.cpp  kernel_registry_test.cpp  run_test.sh
(+282 files in other folders)
